apps/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: budget-app
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
