apps/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
  namespace: budget-app
spec:
  selector:
    app: rails
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
