apps/rails-ingress.yaml
# apps/rails-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
  namespace: budget-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: budget-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails
                port:
                  number: 80
